--- a/Assignment1/Assignment1/Assignment1.vcxproj.filters
+++ b/Assignment1/Assignment1/Assignment1.vcxproj.filters
@@ -21,5 +21,6 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="values.txt" />
+    <Text Include="..\pipeTest.txt" />
   </ItemGroup>
 </Project>
